--- a/deno.json
+++ b/deno.json
@@ -1,7 +1,7 @@
 {
   "tasks": {
-    "watch": "deno run --watch --allow-net --allow-env --allow-read main.ts",
-    "start": "deno run --allow-net --allow-env --allow-read main.ts",
-    "compile": "deno compile --allow-net --allow-env --allow-read main.ts"
+    "watch": "deno run --watch --allow-net --allow-env --allow-read --allow-write main.ts",
+    "start": "deno run --allow-net --allow-env --allow-read --allow-write main.ts",
+    "compile": "deno compile --allow-net --allow-env --allow-read --allow-write main.ts"
   }
 }
