--- a/deno.json
+++ b/deno.json
@@ -2,7 +2,7 @@
   "tasks": {
     "watch": "deno run --watch --allow-net --allow-env --allow-read --allow-write main.ts",
     "start": "deno run --allow-net --allow-env --allow-read --allow-write main.ts",
-    "compile": "deno compile --allow-net --allow-env --allow-read --allow-write main.ts"
+    "compile": "deno compile --allow-net --allow-env --allow-read --allow-write -o coeiroink-v2-bridge.exe main.ts"
   },
   "lock": false
 }
