--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,8 @@ jobs:
           cp coeiroink-v2-bridge ./build_resources/ || true
           cp providers/icon.png ./build_resources/
           cd build_resources
-          compress-archive * ../coeiroink-bridge-${{ github.ref_name }}-${{ matrix.name }}.vvpp
+          7z a -tzip coeiroink-bridge-${{ github.ref_name }}-${{ matrix.name }}.zip *
+          mv coeiroink-bridge-${{ github.ref_name }}-${{ matrix.name }}.zip coeiroink-bridge-${{ github.ref_name }}-${{ matrix.name }}.vvpp
 
       - name: Create Release
         uses: softprops/action-gh-release@v1
