Add: 自動起動を追加

--- a/deno.json
+++ b/deno.json
@@ -1,8 +1,8 @@
 {
   "tasks": {
-    "watch": "deno run --watch --allow-net --allow-env --allow-read --allow-write main.ts",
-    "start": "deno run --allow-net --allow-env --allow-read --allow-write main.ts",
-    "compile": "deno compile --allow-net --allow-env --allow-read --allow-write -o coeiroink-v2-bridge main.ts"
+    "watch": "deno run --watch --allow-net --allow-run --allow-env --allow-read --allow-write main.ts",
+    "start": "deno run --allow-net --allow-run --allow-env --allow-read --allow-write main.ts",
+    "compile": "deno compile --allow-net --allow-run --allow-env --allow-read --allow-write -o coeiroink-v2-bridge main.ts"
   },
   "lock": false
 }
