--- a/build_resources/engine_manifest.json
+++ b/build_resources/engine_manifest.json
@@ -3,5 +3,6 @@
   "uuid": "96755ba9-6c9d-4166-aaf3-86633dfa0ca5",
   "command": "coeiroink-v2-bridge",
   "port": 50132,
-  "supported_features": {}
+  "supported_features": {},
+  "version": "0.3.0"
 }
